tests/errors/tuple_index_out_of_range.py
# expect_error: IndexError
# expect_error: tuple index out of range
data = (1, 2)
print(data[5])